--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,25 @@
         <servlet-name>ControladorUsuario</servlet-name>
         <servlet-class>controlador.ControladorUsuario</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControladorLiga</servlet-name>
+        <servlet-class>controlador.ControladorLiga</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ControladorEquipo</servlet-name>
+        <servlet-class>controlador.ControladorEquipo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ControladorUsuario</servlet-name>
         <url-pattern>/ControladorUsuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControladorLiga</servlet-name>
+        <url-pattern>/ControladorLiga</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControladorEquipo</servlet-name>
+        <url-pattern>/ControladorEquipo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
