--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\Program Files\\glassfish4.0\\glassfish;C:\\Program Fil
 j2ee.server.middleware=C:/Program Files/glassfish4.0
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\jorge\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
